# Image-analysis

./: .giacomo_analysis.py.swp  .nikhil_litafnucleus.py.swp  03_LITAF_ACCTRL.tif  03_LITAF_NACTRL.tif  03_nucleo_ACCTRL.tif  03_nucleo_NACTRL.tif  Iman.py  Iman.py~  Untitled 1.odp  analysis.py  analysis.py~  box plot code.odt  giacomo_analysis.py  giacomo_analysis.py~  giacomo_average.py~  giacomo_code.py  giacomo_code.py~  giacomo_codeLX-2.py  giacomo_codeLX-2.py~  giacomo_codeLX2.py  giacomo_codeLX2.py~  giacomo_code_federica.py  giacomo_density.py  giacomo_density.py~  giacomo_fake_analysis.py  giacomo_fake_analysis~  giacomo_fake_codeLX2.py  giacomo_fake_codeLX2.py~  giacomo_histograms.py  giacomo_histograms.py~  giacomo_histograms2.py~  giacomo_load.py  giacomo_load.py~  giacomo_mainapi.py~  giacomo_nicola_labels.py~  giacomo_output_modified.py  giacomo_output_modified.py~  giacomo_plotvalues.py~  giacomo_work_main2d.py~  litafcoord.txt  (+34 more)
Giacomo Old/: giacomo_average.py  giacomo_codeLX2.py  giacomo_histograms.py
Graphs/: giacomo_boxplot.py
Graphs/LX-2/molecule_otsu = False/BioImageXD-1.0/ITK/lib/InsightToolkit/: ITKBuildSettings.cmake  ITKConfig.cmake  ITKLibraryDepends.cmake  libITKAlgorithms.so.3.20  libITKAlgorithms.so.3.20.0  libITKBasicFilters.so.3.20  libITKBasicFilters.so.3.20.0  libITKCommon.so.3.20  libITKCommon.so.3.20.0  libITKDICOMParser.so.3.20  libITKDICOMParser.so.3.20.0  libITKEXPAT.so.3.20  libITKEXPAT.so.3.20.0  libITKFEM.so.3.20  libITKFEM.so.3.20.0  libITKIO.so.3.20  libITKIO.so.3.20.0  libITKIOReview.so.3.20  libITKIOReview.so.3.20.0  libITKMetaIO.so.3.20  libITKMetaIO.so.3.20.0  libITKNrrdIO.so.3.20  (+44 more)
Graphs/LX-2/molecule_otsu = False/BioImageXD-1.0/ITK/lib/InsightToolkit/WrapITK/Configuration/Languages/: CMakeLists.txt  itk.i
Graphs/LX-2/molecule_otsu = False/BioImageXD-1.0/ITK/lib/InsightToolkit/WrapITK/Configuration/Languages/GccXML/: CMakeLists.txt
Graphs/LX-2/molecule_otsu = False/BioImageXD-1.0/ITK/lib/InsightToolkit/WrapITK/Configuration/Languages/Python/: CMakeLists.txt  itkConfig.py.in
Graphs/LX-2/molecule_otsu = False/BioImageXD-1.0/ITK/lib/InsightToolkit/WrapITK/Configuration/Languages/SwigInterface/: CMakeLists.txt  igenerator.py
Graphs/LX-2/molecule_otsu = False/BioImageXD-1.0/ITK/lib/InsightToolkit/WrapITK/Configuration/Languages/SwigInterface/pygccxml-1.0.0/pygccxml/parser/: config.py  declarations_cache.py  directory_cache.py  scanner.py
Graphs/LX-2/molecule_otsu = False/BioImageXD-1.0/ITK/lib/InsightToolkit/WrapITK/Configuration/Languages/SwigInterface/pygccxml-1.0.0/pygccxml/utils/: __init__.py
Graphs/LX-2/molecule_otsu = False/BioImageXD-1.0/Modules/Readers/: LIFDataSource.py
Graphs/LX-2/molecule_otsu = False/BioImageXD-1.0/XMLDescs/: Analyze ROIs.xml  Analyze objects.xml  Anisotropic diffusion 3D.xml  Dynamic threshold.xml  Extract a subset.xml  Morphological watershed segmentation.xml  Test data generation.xml  Versor Rigid 3D Registration.xml  Watershed segmentation (old).xml
Graphs/LX-2/molecule_otsu = False/BioImageXD-1.0/itkBXD/: CMakeCache.txt  DartTestfile.txt  Makefile  cmake_install.cmake  install_external_wrapitk_project.cmake  install_manifest.txt
Graphs/LX-2/molecule_otsu = False/BioImageXD-1.0/itkBXD/lib/: itkBXDPython.py  itkDynamicThresholdImageFilter.py
Graphs/LX-2/molecule_otsu = False/BioImageXD-1.0/vtkBXD/: CMakeCache.txt  DartTestfile.txt  Makefile  VTKBXDConfigure.h  cmake_install.cmake  install_manifest.txt
Graphs/LX-2/molecule_otsu = False/BioImageXD-1.0/vtkBXD/Processing/: DartTestfile.txt  Makefile  cmake_install.cmake  vtkBXDProcessingPythonInit.cxx  vtkBXDProcessingPythonInit.data  vtkDistanceRepresentationScaled2DPython.cxx  vtkExtTIFFReaderPython.cxx  vtkHandleColorTransferFunctionPython.cxx  vtkImageAlphaFilterPython.cxx  vtkImageAutoThresholdColocalizationPython.cxx  vtkImageColocalizationFilterPython.cxx  vtkImageColocalizationTestPython.cxx  vtkImageColorMergePython.cxx  vtkImageDiffractionPSF3DPython.cxx  vtkImageIterativeDeconvolution3DPython.cxx  vtkImageLabelAveragePython.cxx  vtkImageLabelCountPython.cxx  vtkImageLabelDistanceToSurfacePython.cxx  vtkImageMapToIntensitiesPython.cxx  vtkImageSimpleMIPPython.cxx  vtkImageSolitaryFilterPython.cxx  vtkIntensityTransferFunctionPython.cxx  vtkLIFReader.cxx  vtkLIFReader.h  vtkLIFReaderPython.cxx  vtkLSMReaderPython.cxx  vtkTestMemoryPython.cxx
Graphs/Libraries/: giacomo_boxplot.py
Graphs/Libraries/nicola_thelib/: loader.py  nicola_BP_LX-2_nuclei.py  nicola_BP_nuclei.py  nicola_BP_stellate_nuclei.py~  nicola_cyt.py  nicola_hist_stellate_nuclei.py  nicola_loader.py~  nicola_main2d.py  nicola_processing.py~  nicola_whole.py~  processing.py  processing_no_otsu.py
Nikhil Old/: nikhil3Dload.py  nikhil_code.py  nikhil_lib.py  nikhil_lib.py~  nikhil_load.py
Nikhil_Trials/: ACFullData.txt  CanNucAC60x.txt  CanNucNA60x.txt  FullData.txt  NAFullData.txt.txt  NAFullData.txt~  SegFullTrial.txt  TDAnalysisAC60x.txt  TDAnalysisAC60x.txt~  TDAnalysisNA60x.txt  TDAnalysisNA60x.txt~  TDAnalysisNA60xN.txt  findlitafAC60x.txt  findlitafNA60x.txt  trialseg.txt
giacomo_nicola_test/: giacomo_new_select_arrays_labels.py~  giacomo_nicola_labels.py~  main2d.py~  main3D.py  main_2d.py  nicola_func.py  nicola_processing.py  nicolatest.py~  nprocessing.py~  output.py~  processing.py~  processing3D.py
giacomo_nicola_test_labels/: giacomo_nicola_labels.py  giacomo_nicola_labels.py~  main2d.py  nicola_main2d.py  nicola_main2d.py~  nicola_test.py~  nmain2d.py  ntest.py
lib/: main2d.py  output.py
lib/comparaciones/:)/: NTvsPLS500
nicola_thelib/: nicola_BP_LX-2_nuclei.py  nicola_BP_nuclei.py  nicola_cyt.py  nicola_cyt.py~  nicola_l.py  nicola_l.py~  nicola_main2d.py  nicola_main2d.py~  nicola_output.py  nicola_processing.py  nicola_stellate.py  nicola_stellate.py~  nicola_whole.py  output.py  output.py~
thelib/: LX-2.2.py  LX-2.2.py~  SegmentTest  SegmentTest.py  SegmentTest.py~  main2d.py  main2d.py~  main3D.py  main3D.py~  nikimgdb.py  output.py  output.py~  processing.py  processing.py~  processing3D.py  processing3D.py~  trialseg.txt~
(+2534 files in other folders)
